components/tabs/index.css
/* ... */
.spectrum-Tabs {
  display: flex;

  /* Contain the selection indicator */
  position: relative;
  z-index: 0;

  margin: 0;
  padding-block: 0;

	/* Friends should align to the top of the tabs */
	vertical-align: top;

	background: linear-gradient(
		to
			var(
				--mod-tabs-list-background-direction,
				var(--spectrum-tabs-list-background-direction)
			),
		var(
				--highcontrast-tabs-divider-background-color,
				var(
					--mod-tabs-divider-background-color,
					var(--spectrum-tabs-divider-background-color)
				)
			)
			0 var(--mod-tabs-divider-size, var(--spectrum-tabs-divider-size)),
		transparent var(--mod-tabs-divider-size, var(--spectrum-tabs-divider-size))
	);
}

.spectrum-Tabs-item {
	/* Contain the focus ring */
	position: relative;
	box-sizing: border-box;

	block-size: calc(var(--mod-tabs-item-height, var(--spectrum-tabs-item-height)) - var(--mod-tabs-divider-size, var(--spectrum-tabs-divider-size)));

  /* Float above the tab line */
  z-index: 1;

  text-decoration: none;
  white-space: nowrap;

	color: var(
		--highcontrast-tabs-color,
		var(--mod-tabs-color, var(--spectrum-tabs-color))
	);

	transition: color
		var(--mod-tabs-animation-duration, var(--spectrum-tabs-animation-duration))
		ease-out;
	cursor: pointer;
	outline: none;

	.spectrum-Icon {
		/* Vertical centering */
		block-size: var(--mod-tabs-icon-size, var(--spectrum-tabs-icon-size));
		inline-size: var(--mod-tabs-icon-size, var(--spectrum-tabs-icon-size));
		margin-block-start: var(
			--mod-tabs-top-to-icon,
			var(--spectrum-tabs-top-to-icon)
		);

		& + .spectrum-Tabs-itemLabel {
			margin-inline-start: var(
				--mod-tabs-icon-to-text,
				var(--spectrum-tabs-icon-to-text)
			);
		}
	}

	&::before {
		content: "";
		position: absolute;

    box-sizing: border-box;

		block-size: calc(
			100% - var(--mod-tabs-top-to-text, var(--spectrum-tabs-top-to-text))
		);
		inline-size: calc(
			100% +
				var(
					--mod-tabs-focus-indicator-gap,
					var(--spectrum-tabs-focus-indicator-gap)
				) * 2
		);

		inset-block-start: calc(
			var(--mod-tabs-top-to-text, var(--spectrum-tabs-top-to-text)) / 2
		);
		inset-inline-start: calc(
			-1 * var(--mod-tabs-focus-indicator-gap, var(--spectrum-tabs-focus-indicator-gap))
		);
		inset-inline-end: calc(
			-1 * var(--mod-tabs-focus-indicator-gap, var(--spectrum-tabs-focus-indicator-gap))
		);

		border: var(
				--mod-tabs-focus-indicator-width,
				var(--spectrum-tabs-focus-indicator-width)
			)
			solid transparent;
		border-radius: var(
			--mod-tabs-focus-indicator-border-radius,
			var(--spectrum-tabs-focus-indicator-border-radius)
		);

		pointer-events: none;
	}

	&:hover {
		color: var(
			--highcontrast-tabs-color-hover,
			var(--mod-tabs-color-hover, var(--spectrum-tabs-color-hover))
		);
	}

	&.is-selected {
		color: var(
			--highcontrast-tabs-color-selected,
			var(--mod-tabs-color-selected, var(--spectrum-tabs-color-selected))
		);
	}

	&.is-disabled {
		cursor: default;
		color: var(
			--highcontrast-tabs-color-disabled,
			var(--mod-tabs-color-disabled, var(--spectrum-tabs-color-disabled))
		);

		.spectrum-Tabs-itemLabel {
			cursor: default;
		}
	}

	&:focus,
	&:focus-visible {
		color: var(
			--highcontrast-tabs-color-key-focus,
			var(--mod-tabs-color-key-focus, var(--spectrum-tabs-color-key-focus))
		);

		&::before {
			border-color: var(
				--highcontrast-tabs-focus-indicator-color,
				var(
					--mod-tabs-focus-indicator-color,
					var(--spectrum-tabs-focus-indicator-color)
				)
			);
		}
	}
}

.spectrum-Tabs-itemLabel {
	cursor: pointer;
	display: inline-block;
	vertical-align: top;

	font-family: var(--mod-tabs-font-family, var(--spectrum-tabs-font-family));
	font-style: var(--mod-tabs-font-style, var(--spectrum-tabs-font-style));
	font-size: var(--mod-tabs-font-weight, var(--spectrum-tabs-font-size));
	font-weight: var(--mod-tabs-font-weight, var(--spectrum-tabs-font-weight));
	line-height: var(--mod-tabs-line-height, var(--spectrum-tabs-line-height));
	margin-block-start: var(
		--mod-tabs-top-to-text,
		var(--spectrum-tabs-top-to-text)
	);
	margin-block-end: var(
		--mod-tabs-bottom-to-text,
		var(--spectrum-tabs-bottom-to-text)
	);

  /* support links */
  text-decoration: none;

  &:empty {
    /* Hide the tab label if it's not being used */
    display: none;
  }
}

.spectrum-Tabs-selectionIndicator {
	position: absolute;
	inset-inline-start: 0;
	background-color: var(
		--highcontrast-tabs-selection-indicator-color,
		var(
			--mod-tabs-selection-indicator-color,
			var(--spectrum-tabs-selection-indicator-color)
		)
	);

  /* Be below the tab */
  z-index: 0;

	transition: transform
		var(--mod-tabs-animation-duration, var(--spectrum-tabs-animation-duration))
		var(--mod-tabs-animation-ease, var(--spectrum-tabs-animation-ease));
	transform-origin: top left;

	border-radius: var(
		--mod-tabs-divider-border-radius,
		var(--spectrum-tabs-divider-border-radius)
	);
}

.spectrum-Tabs--horizontal {
  align-items: center;

  .spectrum-Tabs-item {
    vertical-align: top;

		/* Target anything since React likes to add lots of happy <div>s around all things */
		& + *:not(.spectrum-Tabs-selectionIndicator) {
			margin-inline-start: var(
				--mod-tabs-item-horizontal-spacing,
				var(--spectrum-tabs-item-horizontal-spacing)
			);
		}
	}

	.spectrum-Tabs-selectionIndicator {
		position: absolute;
		inset-block-end: 0;
		block-size: var(--mod-tabs-divider-size, var(--spectrum-tabs-divider-size));
	}

	&.spectrum-Tabs--compact {
		/* The ActionButton is taller than the tabs, so don't push tabs around */
		box-sizing: content-box;
		align-items: end;
	}
}

/* Quiet tabs should not extend all the way across the screen as their line doesn't */
.spectrum-Tabs--quiet {
	display: inline-flex;
	background: none;
	border-color: transparent;

	.spectrum-Tabs-selectionIndicator {
		padding-inline-start: var(
			--mod-tabs-start-to-item-quiet,
			var(--spectrum-tabs-start-to-item-quiet)
		);
	}
}
/* ... */

